# bookmarker

./: README.md
browser-extension/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
browser-extension/src/: App.tsx  content.ts  index.css
browser-extension/src/background/: index.ts
browser-extension/src/content/: index.ts  test.ts
server/: .gitignore  app.py  main.py  pyproject.toml  schema.sql  test.py  utils.py
